repair the hover effect on mobile

--- a/css/check-word-style.css
+++ b/css/check-word-style.css
@@ -51,5 +51,7 @@ body {
 }
 @media screen and (max-width: 600px) {
   .answers:hover {
+    /* add this because hover effect work weird on mobile */
+    background-color: rgb(160, 235, 240);
   }
 }
